deploy: b3126e6306886c2fe3688ee679a99025eecb13bd

--- a/openapi/credentials-api/1.0.0/credentials-api.yaml
+++ b/openapi/credentials-api/1.0.0/credentials-api.yaml
@@ -61,6 +61,63 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/ApiErrorDetail"
+  /v1/participants/{participantContextId}/offers:
+    post:
+      tags:
+      - Credential Offer API
+      description: Notifies the holder about the availability of a particular credential
+        for issuance
+      operationId: offerCredential
+      parameters:
+      - name: participantContextId
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: Authorization
+        in: header
+        required: false
+        style: simple
+        explode: false
+        schema:
+          type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: string
+              externalDocs:
+                description: DCP Credential Offer API
+                url: https://eclipse-dataspace-dcp.github.io/decentralized-claims-protocol
+      responses:
+        "200":
+          description: The offer notification was successfully received.
+        "400":
+          description: Request body was malformed
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/ApiErrorDetail"
+        "401":
+          description: No Authorization header was given.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/ApiErrorDetail"
+        "403":
+          description: The given authentication token could not be validated.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/ApiErrorDetail"
   /v1/participants/{participantContextId}/presentations/query:
     post:
       tags:
@@ -295,6 +352,6 @@ components:
   securitySchemes:
     Authentication:
       type: http
-      description: Self-Issued ID token containing an access_token
+      description: Self-Issued ID
       scheme: bearer
       bearerFormat: JWT
