deploy: d4821337693e69122d9d0878be371fae2166974b

--- a/openapi/identity-api/1.0.0-alpha/identity-api.yaml
+++ b/openapi/identity-api/1.0.0-alpha/identity-api.yaml
@@ -1675,7 +1675,6 @@ components:
           type: object
           additionalProperties:
             type: object
-          writeOnly: true
         id:
           type: string
         type:
@@ -1683,6 +1682,10 @@ components:
     CredentialSubject:
       type: object
       properties:
+        claims:
+          type: object
+          additionalProperties:
+            type: object
         id:
           type: string
     Criterion:
