--- a/openapi/identity-api/identity-api.yaml
+++ b/openapi/identity-api/identity-api.yaml
@@ -1675,7 +1675,6 @@ components:
           type: object
           additionalProperties:
             type: object
-          writeOnly: true
         id:
           type: string
         type:
@@ -1683,6 +1682,10 @@ components:
     CredentialSubject:
       type: object
       properties:
+        claims:
+          type: object
+          additionalProperties:
+            type: object
         id:
           type: string
     Criterion:
