--- a/openapi/credentials-api/1.0.0/credentials-api.yaml
+++ b/openapi/credentials-api/1.0.0/credentials-api.yaml
@@ -2,65 +2,13 @@ openapi: 3.0.1
 info:
   title: credentials-api
   description: REST API documentation for the credentials-api
+  license:
+    name: "The Apache License, Version 2.0"
+    url: http://www.apache.org/licenses/LICENSE-2.0.txt
   version: 1.0.0
 servers:
-- url: /
+- url: http://localhost:8080
 paths:
-  /v1/participants/{participantContextId}/credentials:
-    post:
-      tags:
-      - Storage API
-      description: Writes a set of credentials into storage
-      operationId: storeCredential
-      parameters:
-      - name: participantContextId
-        in: path
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: string
-      - name: Authorization
-        in: header
-        required: false
-        style: simple
-        explode: false
-        schema:
-          type: string
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/CredentialMessage"
-      responses:
-        "200":
-          description: The credentialMessage was successfully processed and stored
-        "400":
-          description: Request body was malformed
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/ApiErrorDetail"
-        "401":
-          description: No Authorization header was given.
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/ApiErrorDetail"
-        "403":
-          description: "The given authentication token could not be validated. This\
-            \ can happen, when the request body calls for a broader credentialMessage\
-            \ scope than the granted scope in the auth token"
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/ApiErrorDetail"
   /v1/participants/{participantContextId}/offers:
     post:
       tags:
@@ -189,6 +137,61 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/ApiErrorDetail"
+  /v1/participants/{participantContextId}/credentials:
+    post:
+      tags:
+      - Storage API
+      description: Writes a set of credentials into storage
+      operationId: storeCredential
+      parameters:
+      - name: participantContextId
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: Authorization
+        in: header
+        required: false
+        style: simple
+        explode: false
+        schema:
+          type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/CredentialMessage"
+      responses:
+        "200":
+          description: The credentialMessage was successfully processed and stored
+        "400":
+          description: Request body was malformed
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/ApiErrorDetail"
+        "401":
+          description: No Authorization header was given.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/ApiErrorDetail"
+        "403":
+          description: "The given authentication token could not be validated. This\
+            \ can happen, when the request body calls for a broader credentialMessage\
+            \ scope than the granted scope in the auth token"
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/ApiErrorDetail"
 components:
   schemas:
     ApiErrorDetail:
@@ -207,42 +210,24 @@ components:
         type: ErrorType
         path: object.error.path
         invalidValue: this value is not valid
-    CredentialContainerSchema:
-      type: object
-      example:
-        credentialType: MembershipCredential
-        payload: ""
-        format: jwt
-    CredentialMessage:
+    PresentationResponseMessage:
       required:
       - '@context'
-      - '@type'
-      - credentials
-      - requestId
+      - presentation
       type: object
       properties:
         '@context':
           type: object
-        '@type':
-          type: string
-        credentials:
+        presentation:
           type: array
           items:
-            $ref: "#/components/schemas/CredentialContainerSchema"
-        requestId:
-          type: string
+            $ref: "#/components/schemas/PresentationResponseMessage_presentation_inner"
       example:
         '@context':
-        - https://w3id.org/dspace-dcp/v1.0/dcp.jsonld
-        type: CredentialMessage
-        credentials:
-        - credentialType: MembershipCredential
-          payload: ""
-          format: jwt
-        - credentialType: OrganizationCredential
-          payload: ""
-          format: json-ld
-        requestId: requestId
+        - https://w3id.org/tractusx-trust/v0.8
+        '@type': PresentationResponseMessage
+        presentation:
+        - dsJdh...UMetV
     JsonObject:
       type: object
       properties:
@@ -273,6 +258,59 @@ components:
           - "TRUE"
           - "FALSE"
           - "NULL"
+    PresentationQueryMessage:
+      required:
+      - '@context'
+      - '@type'
+      type: object
+      properties:
+        '@context':
+          type: object
+        '@type':
+          type: string
+        presentationDefinition:
+          type: object
+          example: |
+            {
+              "comment": "taken from https://identity.foundation/presentation-exchange/spec/v2.0.0/#presentation-definition"
+              "presentationDefinition": {
+                "id": "first simple example",
+                "input_descriptors": [
+                  {
+                    "id": "A specific type of VC",
+                    "name": "A specific type of VC",
+                    "purpose": "We want a VC of this type",
+                    "constraints": {
+                      "fields": [
+                        {
+                          "path": [
+                            "$.type"
+                          ],
+                          "filter": {
+                            "type": "string",
+                            "pattern": "<the type of VC e.g. degree certificate>"
+                          }
+                        }
+                      ]
+                    }
+                  }
+                ]
+              }
+            }
+        scope:
+          type: array
+          items:
+            type: string
+      example:
+        '@context':
+        - https://w3id.org/tractusx-trust/v0.8
+        - https://identity.foundation/presentation-exchange/submission/v1
+        '@type': PresentationQueryMessage
+        presentationDefinition: null
+        scope:
+        - org.eclipse.edc.vc.type:SomeCredential_0.3.5:write
+        - org.eclipse.edc.vc.type:SomeOtherCredential:read
+        - org.eclipse.edc.vc.type:ThirdCredential:*
     PresentationDefinitionSchema:
       type: object
       example: |
@@ -302,56 +340,44 @@ components:
             ]
           }
         }
-    PresentationQueryMessage:
+    CredentialMessage:
       required:
       - '@context'
       - '@type'
+      - credentials
+      - requestId
       type: object
       properties:
         '@context':
           type: object
         '@type':
           type: string
-        presentationDefinition:
-          $ref: "#/components/schemas/PresentationDefinitionSchema"
-        scope:
+        credentials:
           type: array
           items:
-            type: string
+            $ref: "#/components/schemas/CredentialContainerSchema"
+        requestId:
+          type: string
       example:
         '@context':
-        - https://w3id.org/tractusx-trust/v0.8
-        - https://identity.foundation/presentation-exchange/submission/v1
-        '@type': PresentationQueryMessage
-        presentationDefinition: null
-        scope:
-        - org.eclipse.edc.vc.type:SomeCredential_0.3.5:write
-        - org.eclipse.edc.vc.type:SomeOtherCredential:read
-        - org.eclipse.edc.vc.type:ThirdCredential:*
-    PresentationResponseMessage:
-      required:
-      - '@context'
-      - presentation
+        - https://w3id.org/dspace-dcp/v1.0/dcp.jsonld
+        type: CredentialMessage
+        credentials:
+        - credentialType: MembershipCredential
+          payload: ""
+          format: jwt
+        - credentialType: OrganizationCredential
+          payload: ""
+          format: json-ld
+        requestId: requestId
+    CredentialContainerSchema:
       type: object
-      properties:
-        '@context':
-          type: object
-        presentation:
-          type: array
-          items:
-            type: object
-            anyOf:
-            - type: string
-            - $ref: "#/components/schemas/JsonObject"
       example:
-        '@context':
-        - https://w3id.org/tractusx-trust/v0.8
-        '@type': PresentationResponseMessage
-        presentation:
-        - dsJdh...UMetV
-  securitySchemes:
-    Authentication:
-      type: http
-      description: Self-Issued ID
-      scheme: bearer
-      bearerFormat: JWT
+        credentialType: MembershipCredential
+        payload: ""
+        format: jwt
+    PresentationResponseMessage_presentation_inner:
+      type: object
+      anyOf:
+      - type: string
+      - $ref: "#/components/schemas/JsonObject"
