--- a/openapi/issuer-api/issuer-api.yaml
+++ b/openapi/issuer-api/issuer-api.yaml
@@ -2,9 +2,12 @@ openapi: 3.0.1
 info:
   title: issuer-api
   description: REST API documentation for the issuer-api
+  license:
+    name: "The Apache License, Version 2.0"
+    url: http://www.apache.org/licenses/LICENSE-2.0.txt
   version: 1.0.0
 servers:
-- url: /
+- url: http://localhost:8080
 paths:
   /v1alpha/participants/{participantContextId}/credentials:
     post:
@@ -185,19 +188,6 @@ components:
         type: ErrorType
         path: object.error.path
         invalidValue: this value is not valid
-    CredentialRequest:
-      required:
-      - credentialType
-      - format
-      type: object
-      properties:
-        credentialType:
-          type: string
-        format:
-          type: string
-      example:
-        credentialType: MembershipCredential
-        format: vcdm11_jwt
     CredentialRequestMessage:
       required:
       - '@context'
@@ -221,25 +211,19 @@ components:
           format: vcdm11_ld
         - credentialType: Iso9001Credential
           format: vcdm20_jose
-    CredentialStatus:
+    CredentialRequest:
       required:
-      - '@context'
-      - status
-      - type
+      - credentialType
+      - format
       type: object
       properties:
-        '@context':
-          type: object
-        status:
+        credentialType:
           type: string
-        type:
+        format:
           type: string
       example:
-        '@context':
-        - https://w3id.org/dspace-dcp/v1.0/dcp.jsonld
-        type: CredentialStatus
-        requestId: requestId
-        status: RECEIVED
+        credentialType: MembershipCredential
+        format: vcdm11_jwt
     IssuerMetadata:
       required:
       - '@context'
@@ -282,39 +266,22 @@ components:
                   filter:
                     type: string
                     pattern: ^AttestationCredential$
-    JsonObject:
+    CredentialStatus:
+      required:
+      - '@context'
+      - status
+      - type
       type: object
       properties:
-        empty:
-          type: boolean
-        valueType:
+        '@context':
+          type: object
+        status:
           type: string
-          enum:
-          - ARRAY
-          - OBJECT
-          - STRING
-          - NUMBER
-          - "TRUE"
-          - "FALSE"
-          - "NULL"
-      additionalProperties:
-        $ref: "#/components/schemas/JsonValue"
-    JsonValue:
-      type: object
-      properties:
-        valueType:
+        type:
           type: string
-          enum:
-          - ARRAY
-          - OBJECT
-          - STRING
-          - NUMBER
-          - "TRUE"
-          - "FALSE"
-          - "NULL"
-  securitySchemes:
-    Authentication:
-      type: http
-      description: Self-Issued ID token containing an access_token
-      scheme: bearer
-      bearerFormat: JWT
+      example:
+        '@context':
+        - https://w3id.org/dspace-dcp/v1.0/dcp.jsonld
+        type: CredentialStatus
+        requestId: requestId
+        status: RECEIVED
