--- a/openapi/issuer-admin-api/issuer-admin-api.yaml
+++ b/openapi/issuer-admin-api/issuer-admin-api.yaml
@@ -1041,6 +1041,8 @@ components:
     Holder:
       type: object
       properties:
+        anonymous:
+          type: boolean
         did:
           type: string
         holderId:
