deploy: bf8d085253655d4aad71840dd96e1213c5745794

--- a/openapi/identity-api/1.0.0-alpha/identity-api.yaml
+++ b/openapi/identity-api/1.0.0-alpha/identity-api.yaml
@@ -882,7 +882,7 @@ paths:
       tags:
       - Key Pairs
       description: Finds all KeyPairResources for a particular ParticipantContext.
-      operationId: queryKeyPairByParticipantId
+      operationId: queryKeyPairByParticipantContextId
       parameters:
       - name: participantContextId
         in: path
@@ -1876,7 +1876,7 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/KeyDescriptor"
-        participantId:
+        participantContextId:
           type: string
         roles:
           type: array
