--- a/openapi/issuer-admin-api/1.0.0-alpha/issuer-admin-api.yaml
+++ b/openapi/issuer-admin-api/1.0.0-alpha/issuer-admin-api.yaml
@@ -7,7 +7,7 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.txt
   version: 1.0.0-alpha
 servers:
-- url: http://localhost:8080
+- url: /
 paths:
   /v1alpha/participants/{participantContextId}/credentials/{credentialId}/suspend:
     post:
@@ -1038,6 +1038,10 @@ components:
           type: string
         name:
           type: string
+        properties:
+          type: object
+          additionalProperties:
+            type: object
     Holder:
       type: object
       properties:
@@ -1051,6 +1055,10 @@ components:
           type: string
         participantContextId:
           type: string
+        properties:
+          type: object
+          additionalProperties:
+            type: object
     QuerySpec:
       type: object
       properties:
